fix: z-index added to header

--- a/layout-restaurant/styles/styles.css
+++ b/layout-restaurant/styles/styles.css
@@ -57,6 +57,7 @@ header {
     height: var(--header-height);
     padding: 0 185px;
     background-image: linear-gradient(var(--header-background-top), var(--header-background-bottom));
+    z-index: 100;
 }
 
 section {
